--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Fiction'
+- GITenberg
 title: Prince Fortunatus
 url: http://www.gutenberg.org/ebooks/16217
